More SonarCloud issues fixes related to parametrized types